# variant_visit

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark_visit.cpp
include/: CMakeLists.txt  variant_visit.h
include/zob/: variant_visit.h
tests/: CMakeLists.txt  test_visit.cpp
